[package]
name = "amimono-haze"
version = "0.1.0"
edition = "2024"

[features]
default = ["storage", "dashboard"]
storage = ["metadata", "dht", "blob"]
dashboard = ["dep:axum"]

blob = []
dht = ["metadata"]
metadata = []

[dependencies]
amimono = { git = "https://github.com/aji/amimono.git" }
axum = { version = "0.8.6", optional = true }
futures = { version = "0.3.31" }
lmdb = "0.8.0"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
amimono-build = { git = "https://github.com/aji/amimono.git" }

[dev-dependencies]
env_logger = "0.11.8"

[[example]]
name = "basic"
required-features = ["dashboard"]
